# AIBookBoy

./: README.md
client/android/AISTEMBook/framework/: CMakeLists.txt  build.gradle  proguard-rules.pro
client/android/AISTEMBook/framework/libs/: mp3recorder.aar  soe-release.aar
client/android/AISTEMBook/framework/src/main/: AndroidManifest.xml
client/android/AISTEMBook/framework/src/main/assets/: litepal.xml  provision.file
client/android/AISTEMBook/framework/src/main/cpp/: ContentDetection.cpp  CoverDetection.cpp  FFmpegMusic.cpp  FeatureExtractor.cpp  FindObjectNode.cpp  ImagePreprocessor.cpp  ImagePreprocessor.h  Setting.cpp  Vocabulary.cpp  native-lib-media.cpp  native-lib.cpp
client/android/AISTEMBook/framework/src/main/cpp/include/: ContentDetection.h  CoverDetection.h  DetectionInfo.h  FFmpegMusic.h  FeatureExtractor.h  FindObjectNode.h  KMeans_index.h  ObjSignature.h  Setting.h  ULogger.h  Vocabulary.h  charRecognition.h
client/android/AISTEMBook/framework/src/main/cpp/include/opencv2/: cvconfig.h  videoio.hpp
client/android/AISTEMBook/framework/src/main/cpp/include/opencv2/videoio/: videoio_c.h
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/application/: DCApplication.java  GlobalParameter.java  PictureBookAPP.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/: AppDataManager.java  DataManager.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/bean/: AchievementCondition.java  AchievementSchedule.java  TrackBean.java  TrackInfo.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/db/: AppDbHelper.java  DbHelper.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/db/entities/: AnimInfo.java  LetterBoxWordStatiscalInfo.java  ReadAnimInfo.java  TddeAchievement.java  TddeAppInfo.java  TddeBookStatisticalInfo.java  TddeMusicInfo.java  TddeMusicStatisticalInfo.java  TddeMusicTag.java  TddeUsingTimeStatisticalInfo.java  TddeVoiceInfo.java  TddeVoiceInfo2.java  WiFiInfo.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/db/impl/: LetterBoxWordStatisticalImpl.java  TddeAchievementImpl.java  TddeAppInfoImpl.java  TddeBookStatisticalImpl.java  TddeMusicInfoImpl.java  TddeMusicStatisticalImpl.java  TddeMusicTagImpl.java  TddeUsingTimeStatisticalImpl.java  TddeVoiceInfoImpl.java  TddeVoiceInfoImpl2.java  WiFiInfoImpl.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/db/model/: AudioInfo.java  MQTTConnection.java  PairUser.java  PictureBookData.java  Subscription.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/network/: ApiHelper.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/data/prefs/: AppPreferencesHelper.java  PreferencesHelper.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/helper/: AlbumHelper.java  NotificationHelper.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/: AchievementManager.java  NightAlarmBroadcastReceiver.java  Timers.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/http/: HttpApiEndPoint.java  HttpApiHelper.java  OkHttpClientManager.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/iflytek/: TTSEngineImp.java  TulingQandA.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/interaction/: IState.java  MainInteraction.java  RobotStateMachine.java  State.java  StateMachine.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/mqtt/: ActionListener.java  Connection.java  Connections.java  IReceivedMessageListener.java  MQTTClient.java  MqttCallbackHandler.java  Subscription.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/internal/utils/: AudioManager.java  AudioPlayer.java  MediaManager.java  MenuPlayer.java  MessageUtils.java  RobotInfoUtil.java  SoundPlayer.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/message/: DCBroadcastMsgImpl.java  DCMessage.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/network/: AlbumRequestUtil.java  OkHttpClientManagerNoPrivateSSL.java  OssClientManager.java  OssDownloadManager.java  Requestparameter.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/network/listener/: OnAlbumRequestListener.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/network/util/: Config.java  OSSAuthCredentialsProvider2.java  Tools.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/service/: RobotCameraService.java  RobotEyecareService.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/utils/: AchvUtil.java  AntiAddictionUtil.java  DCPackageUtil.java  GetSystemProperties.java  IPreferences.java  LogFileUtil.java  LogUtil.java  NetworkUtils.java  QRCodeUtil.java  RobotUtil.java  SPUtils.java  StatisticalUtil.java  TddeGameUtil.java  UUIDUtil.java
client/android/AISTEMBook/framework/src/main/java/ai/aistem/xbot/framework/wifihelper/: WiFiHelper.java
client/android/AISTEMBook/framework/src/main/java/android/net/wifi/: WifiManager.java
client/android/AISTEMBook/framework/src/main/res/raw/: robot.db
client/android/AISTEMBook/framework/src/main/res/values/: config.xml  strings.xml
server/: README.md
server/pictureBookProcess/: CMakeLists.txt  README.md
server/pictureBookProcess/include/: CententDetection.h  DetectionInfo.h  FeatureExtractor.h  FindObjectNode.h  KMeans_index.h  ObjSignature.h  Setting.h  Vocabulary.h  okhttps.h  ossclientmanager.h
server/pictureBookProcess/src/: CententDetection.cpp  FeatureExtractor.cpp  FindObjectNode.cpp  Setting.cpp  Vocabulary.cpp  main.cpp  okhttps.cpp  ossclientmanager.cpp
server/pictureBookProcess/src/json/: jsoncpp.cpp
(+94 files in other folders)
